# ChangeLog for dev-php/PEAR-PEAR
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.107 2009/09/23 02:41:50 beandog Exp $

*PEAR-PEAR-1.8.1 (23 Sep 2009)

  23 Sep 2009; Steve Dibb <beandog@gentoo.org> PEAR-PEAR-1.6.1.ebuild,
  PEAR-PEAR-1.6.2-r1.ebuild, PEAR-PEAR-1.7.1.ebuild,
  +PEAR-PEAR-1.8.1.ebuild:
  Version bump, bug 250268; New install system using split ebuilds,
  PEAR-PEAR is only that on package now, dev-php/pear will pull in necessary
  deps individually

*PEAR-PEAR-1.7.1 (17 Mar 2008)

  17 Mar 2008; <jokey@gentoo.org> +files/pear.conf-r1,
  +PEAR-PEAR-1.7.1.ebuild:
  Version bump from project overlay

  03 Feb 2008; Jakub Moc <jakub@gentoo.org>
  +PEAR-PEAR-1.7.1.ebuild:
  Version bump; major ebuild rewrite. Masked for now, see Known bugs at
  http://pear.php.net/package/PEAR/download/1.7.1/ before using this!

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org> PEAR-PEAR-1.6.1.ebuild,
  PEAR-PEAR-1.6.2-r1.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-PEAR-1.6.1.ebuild, PEAR-PEAR-1.6.2-r1.ebuild:
  Fix LICENSE

  01 Dec 2007; nixnut <nixnut@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  Stable on ppc wrt bug 200795

  30 Nov 2007; Steve Dibb <beandog@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  amd64 stable, bug 200795

  30 Nov 2007; Markus Rothe <corsair@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  Stable on ppc64; bug #200795

  30 Nov 2007; Markus Meier <maekke@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  x86 stable, bug #200795

  29 Nov 2007; Markus Ullmann <jokey@gentoo.org> -PEAR-PEAR-1.6.2.ebuild:
  drop old

*PEAR-PEAR-1.6.2-r1 (29 Nov 2007)

  29 Nov 2007; Markus Ullmann <jokey@gentoo.org> +PEAR-PEAR-1.6.2-r1.ebuild:
  Version bump from project overlay

  22 Nov 2007; Jakub Moc <jakub@gentoo.org> +PEAR-PEAR-1.6.2-r1.ebuild:
  Add pear.agavi.org channel for newer dev-php5/agavi

*PEAR-PEAR-1.6.2 (22 Oct 2007)
