@@ -1,6 +1,14 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.107 2009/09/23 02:41:50 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.109 2009/10/05 18:27:51 beandog Exp $
+
+  05 Oct 2009; Steve Dibb <beandog@gentoo.org> PEAR-PEAR-1.8.1.ebuild:
+  Have PEAR-PEAR require same version of dev-php/pear
+
+*PEAR-PEAR-1.9.0 (05 Oct 2009)
+
+  05 Oct 2009; Steve Dibb <beandog@gentoo.org> +PEAR-PEAR-1.9.0.ebuild:
+  Version bump
 
 *PEAR-PEAR-1.8.1 (23 Sep 2009)
 
